Fix dark mode input style

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,7 +23,7 @@ html, body {
   @apply dark:bg-black;
 
   input {
-    @apply border border-gray-300 rounded px-3 py-1 mb-4 text-black;
+    @apply border border-gray-300 rounded px-3 py-1 mb-4 text-black dark:text-gray-100;
 
     &:last-of-type {
       @apply mb-0;
